--- a/src/TransactionsService/Transactions.API/appsettings.json
+++ b/src/TransactionsService/Transactions.API/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "LocalConnection": "Server=(localdb)\\mssqllocaldb;Database=applicationdb;Trusted_Connection=True;",
+    "DockerConnection": "Server=TransactionsServerDb; Database=TransactionsDb; User Id=sa; Password=TransactionsPassword#; Trust Server Certificate=True;"
+  }
 }
