--- a/src/TransactionsService/Transactions.Core/Transactions.Core.csproj
+++ b/src/TransactionsService/Transactions.Core/Transactions.Core.csproj
@@ -10,4 +10,8 @@
     <Folder Include="Abstractions\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.9.0" />
+  </ItemGroup>
+
 </Project>
