Created CardsService and cleaned solution

--- a/src/TransactionsService/Transactions.API/Transactions.API.csproj
+++ b/src/TransactionsService/Transactions.API/Transactions.API.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Transactions.Persistance\Transactions.Persistance.csproj" />
+    <ProjectReference Include="..\Transactions.Application\Transactions.Application.csproj" />
   </ItemGroup>
 
 </Project>
