--- a/src/TransactionsService/Transactions.Application/Transactions.Application.csproj
+++ b/src/TransactionsService/Transactions.Application/Transactions.Application.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
+    <ProjectReference Include="..\Transactions.Persistance\Transactions.Persistance.csproj" />
   </ItemGroup>
 
 </Project>
