--- a/src/TransactionsService/Transactions.Application/Transactions.Application.csproj
+++ b/src/TransactionsService/Transactions.Application/Transactions.Application.csproj
@@ -7,7 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Shared\Shared.Core\Shared.Core.csproj" />
     <ProjectReference Include="..\Transactions.Persistance\Transactions.Persistance.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Handlers\Transactions\" />
   </ItemGroup>
 
 </Project>
