--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,19 @@
 /.vs
 **/bin
 **/obj
+src/client/node_modules
+src/client/.pnp
+.pnp.js
+src/client/coverage
+
+src/client/build
+
+**/.DS_Store
+**/.env.local
+**/.env.development.local
+**/.env.test.local
+**/.env.production.local
+
+**/npm-debug.log*
+**/yarn-debug.log*
+**/yarn-error.log*
