--- a/src/QuotesService/Quotes.Application/Quotes.Application.csproj
+++ b/src/QuotesService/Quotes.Application/Quotes.Application.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Quotes.Core\Quotes.Core.csproj" />
+  </ItemGroup>
+
 </Project>
