created query quotes and registered services

--- a/src/QuotesService/Quotes.Application/Quotes.Application.csproj
+++ b/src/QuotesService/Quotes.Application/Quotes.Application.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Shared\Shared.Core\Shared.Core.csproj" />
     <ProjectReference Include="..\Quotes.Core\Quotes.Core.csproj" />
   </ItemGroup>
 
