--- a/src/QuotesService/Quotes.API/Quotes.API.csproj
+++ b/src/QuotesService/Quotes.API/Quotes.API.csproj
@@ -15,5 +15,10 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
+	
+  <ItemGroup>
+    <ProjectReference Include="..\Quotes.Application\Quotes.Application.csproj" />
+    <ProjectReference Include="..\Quotes.Core\Quotes.Core.csproj" />
+  </ItemGroup>
 
 </Project>
