--- a/src/Shared/Shared.Application/Shared.Application.csproj
+++ b/src/Shared/Shared.Application/Shared.Application.csproj
@@ -7,12 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Shared\Shared.Core\Shared.Core.csproj" />
-    <ProjectReference Include="..\Transactions.Persistance\Transactions.Persistance.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="gRPC\" />
+    <Folder Include="Protos\" />
   </ItemGroup>
 
 </Project>
