--- a/src/QuotesService/Quotes.Application/Quotes.Application.csproj
+++ b/src/QuotesService/Quotes.Application/Quotes.Application.csproj
@@ -7,12 +7,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Google.Protobuf" Version="3.26.1" />
+    <PackageReference Include="Grpc.AspNetCore" Version="2.61.0" />
+    <PackageReference Include="Grpc.Net.Client" Version="2.61.0" />
+    <PackageReference Include="Grpc.Tools" Version="2.62.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="8.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Shared\Shared.Core\Shared.Core.csproj" />
+	  <ProjectReference Include="..\..\Shared\Shared.Application\Shared.Application.csproj"/>
     <ProjectReference Include="..\Quotes.Core\Quotes.Core.csproj" />
   </ItemGroup>
 
