--- a/src/Shared/Shared.Application/Shared.Application.csproj
+++ b/src/Shared/Shared.Application/Shared.Application.csproj
@@ -10,4 +10,18 @@
     <Folder Include="Protos\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Google.Protobuf" Version="3.26.1" />
+    <PackageReference Include="Grpc.AspNetCore" Version="2.61.0" />
+    <PackageReference Include="Grpc.Net.Client" Version="2.61.0" />
+    <PackageReference Include="Grpc.Tools" Version="2.62.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+	<ItemGroup>
+		<Protobuf Include="Protos\CommunicationQT.proto" GrpcServices="Server"/>
+	</ItemGroup>
+
 </Project>
