--- a/src/TransactionsService/Transactions.Application/Transactions.Application.csproj
+++ b/src/TransactionsService/Transactions.Application/Transactions.Application.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Shared\Shared.Core\Shared.Core.csproj" />
     <ProjectReference Include="..\Transactions.Persistance\Transactions.Persistance.csproj" />
+	 <ProjectReference Include="..\..\Shared\Shared.Application\Shared.Application.csproj"/>
   </ItemGroup>
 
   <ItemGroup>
