created migration to transactions

--- a/src/QuotesService/Quotes.Application/Quotes.Application.csproj
+++ b/src/QuotesService/Quotes.Application/Quotes.Application.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\Quotes.Core\Quotes.Core.csproj" />
   </ItemGroup>
 
+	<ItemGroup>
+		<Protobuf Include="..\..\Shared\Shared.Application\Protos\CommunicationQT.proto" GrpcServices="Server"/>
+	</ItemGroup>
+
 </Project>
