--- a/src/TransactionsService/Transactions.Application/Transactions.Application.csproj
+++ b/src/TransactionsService/Transactions.Application/Transactions.Application.csproj
@@ -9,11 +9,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Shared\Shared.Core\Shared.Core.csproj" />
     <ProjectReference Include="..\Transactions.Persistance\Transactions.Persistance.csproj" />
-	 <ProjectReference Include="..\..\Shared\Shared.Application\Shared.Application.csproj"/>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="gRPC\" />
+	 <ProjectReference Include="..\..\Shared\Shared.Application\Shared.Application.csproj" />
   </ItemGroup>
 
   <ItemGroup>
@@ -25,5 +21,9 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
   </ItemGroup>
+
+	<ItemGroup>
+		<Protobuf Include="..\..\Shared\Shared.Application\Protos\CommunicationQT.proto" GrpcServices="Client" />
+	</ItemGroup>
 
 </Project>
