--- a/src/NotificationsService/Notifications.API/Properties/launchSettings.json
+++ b/src/NotificationsService/Notifications.API/Properties/launchSettings.json
@@ -45,8 +45,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:62734",
-      "sslPort": 44310
+      "applicationUrl": "http://localhost:55335/",
+      "sslPort": 44357
     }
   }
 }
