--- a/src/TransactionsService/Transactions.API/Properties/launchSettings.json
+++ b/src/TransactionsService/Transactions.API/Properties/launchSettings.json
@@ -45,8 +45,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:8763",
-      "sslPort": 44389
+      "applicationUrl": "http://localhost:51657/",
+      "sslPort": 44330
     }
   }
 }
